--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
         0%, 100% { opacity: 1; }
         50% { opacity: 0.7; }
       }
+      
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 4px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: #1e293b;
+        border-radius: 10px;
+      }
     </style>
   <script type="importmap">
 {
